[package]
name = "tera-text-filters"
description = "Text transformation filters for the Tera template engine."
version = "1.0.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/SirWindfield/tera-text-filters"
authors = ["Sven Lechner <SirWindfield@users.noreply.github.com>"]
edition = "2018"

[dependencies]
heck = "0.3.1"
tera = { version = "1.5.0", default-features = false }
